feat(franchise): add API franchise
