# app/Models/Franchise.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Franchise extends Model
+{
+    protected $fillable = [
+        'name',
+        'email',
+        'phone_number',
+        'location',
+        'message',
+    ];
+}
