# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\Admin\AuthController;
 use App\Http\Controllers\Api\Admin\ProductController;
 use App\Http\Controllers\Api\Admin\LocationController;
+use App\Http\Controllers\Api\FranchiseController;
 
 Route::group([
     'prefix' => 'admin/auth'
@@ -13,6 +14,7 @@ Route::group([
 });
 
 // Public Routes (No Auth)
+Route::post('franchises', [FranchiseController::class, 'store']);
 Route::get('products', [ProductController::class, 'index']);
 Route::get('products/{product}', [ProductController::class, 'show']);
 Route::get('locations', [LocationController::class, 'index']);
@@ -22,4 +24,5 @@ Route::get('locations/{location}', [LocationController::class, 'show']);
 Route::middleware('auth:admin')->group(function () {
     Route::apiResource('products', ProductController::class)->except(['index', 'show']);
     Route::apiResource('locations', LocationController::class)->except(['index', 'show']);
+    Route::apiResource('franchises', FranchiseController::class)->except(['store']);
 });
